force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/tc9_eau__Lodgement_Error_AU__c.object-meta.xml
<CustomObject>
    <label>Lodgement Error AU</label>
    <nameField>
        <displayFormat>LEAU-{0000000000}</displayFormat>
        <label>Lodgement Error AU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lodgement Errors AU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>