force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Area__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Area__c</fullName>
    <description>The 2cloudnine Class that has generated this message</description>
    <inlineHelpText>The 2cloudnine Class that has generated this message</inlineHelpText>
    <label>Area</label>
    <type>TextArea</type>
</CustomField>