force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__ATO_Error__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__ATO_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To denote if the STP Error was created based on ATO error</description>
    <inlineHelpText>To denote if the STP Error was created based on ATO error</inlineHelpText>
    <label>ATO Error</label>
    <type>Checkbox</type>
</CustomField>