force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Do_Not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Lodgement Error AU record will not be deleted when the user clicks Validate on the STP Lodgement Manager UI.</description>
    <inlineHelpText>Indicates that the Lodgement Error AU record will not be deleted when the user clicks Validate on the STP Lodgement Manager UI.</inlineHelpText>
    <label>Do Not Delete</label>
    <type>Checkbox</type>
</CustomField>