force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Employee</description>
    <inlineHelpText>The related Employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Single_Touch_Payroll_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>