force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Error_Message__c</fullName>
    <description>Details of this error</description>
    <inlineHelpText>Details of this error</inlineHelpText>
    <label>Error Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>