force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Lodgement_Item_AU__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Lodgement_Item_AU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lodgement Item AU that the error relates to</description>
    <inlineHelpText>The Lodgement Item AU that the error relates to</inlineHelpText>
    <label>Lodgement Item AU</label>
    <referenceTo>tc9_eau__Lodgement_Item_AU__c</referenceTo>
    <relationshipLabel>Lodgement Errors AU</relationshipLabel>
    <relationshipName>Lodgement_Item_AU_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>