force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee</description>
    <inlineHelpText>The related Payee</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Lodgement Errors AU</relationshipLabel>
    <relationshipName>Single_Touch_Payroll_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>