force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Payee_Withholding__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Withholding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee Withholding</description>
    <inlineHelpText>The related Payee Withholding</inlineHelpText>
    <label>Payee Withholding</label>
    <referenceTo>tc9_pr__Payee_Withholding__c</referenceTo>
    <relationshipLabel>Lodgement Errors AU</relationshipLabel>
    <relationshipName>Single_Touch_Payroll_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>