force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payment Entity</description>
    <inlineHelpText>The related Payment Entity</inlineHelpText>
    <label>Payment Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lodgement Errors AU</relationshipLabel>
    <relationshipName>Lodgement_Errors_AU</relationshipName>
    <type>Lookup</type>
</CustomField>