force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/fields/tc9_eau__Single_Touch_Payroll_Manager__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Single_Touch_Payroll_Manager__c</fullName>
    <description>Open the Single Touch Payroll lodgement in the Single Touch Payroll Manager page</description>
    <formula>If ( RecordType.DeveloperName = &quot;Single_Touch_Payroll&quot; , HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/tc9_eau__SingleTouchPayroll?recordId=&quot;+ tc9_eau__Lodgement_AU__r.Id , IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ 

If( CONTAINS ( Text ( tc9_eau__Lodgement_AU__r.tc9_eau__Status__c ) , &quot;Failed&quot; ) || CONTAINS ( Text ( tc9_eau__Lodgement_AU__r.tc9_eau__Status__c ) , &quot;Rejected&quot; ) || CONTAINS ( Text ( tc9_eau__Lodgement_AU__r.tc9_eau__Status__c ) , &quot;Error&quot; ) || CONTAINS ( Text ( tc9_eau__Lodgement_AU__r.tc9_eau__Status__c ) , &quot;Cancelled&quot; ), &quot;resource/tc9_pr__Payroll_resources/AUS_Payroll/Images/LaunchButton_Red.png&quot;, 


If( CONTAINS ( Text ( tc9_eau__Lodgement_AU__r.tc9_eau__Status__c ) , &quot;New&quot; ) , &quot;resource/tc9_pr__Payroll_resources/AUS_Payroll/Images/LaunchButton_Orange.png&quot;, 

If( CONTAINS ( Text ( tc9_eau__Lodgement_AU__r.tc9_eau__Status__c ) , &quot;ing&quot; ) , &quot;resource/tc9_pr__Payroll_resources/AUS_Payroll/Images/LaunchButton_Green.png&quot;, 

&quot;resource/tc9_pr__Payroll_resources/AUS_Payroll/Images/LaunchButton_Blue.png&quot; ) ) ) ,&quot;Manager&quot;),&quot;_blank&quot;) , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Open the Single Touch Payroll lodgement in the Single Touch Payroll Manager page</inlineHelpText>
    <label>Lodgement Manager</label>
    <type>Text</type>
</CustomField>