force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/recordTypes/tc9_eau__Payroll_Tax.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__Payroll_Tax</fullName>
    <active>true</active>
    <description>Australin Payroll Tax lodgement details</description>
    <label>Payroll Tax</label>
</RecordType>