force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/recordTypes/tc9_eau__Single_Touch_Payroll.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__Single_Touch_Payroll</fullName>
    <active>true</active>
    <description>Single Touch Payroll</description>
    <label>Single Touch Payroll</label>
</RecordType>