force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/recordTypes/tc9_eau__SuperStream.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__SuperStream</fullName>
    <active>true</active>
    <description>SuperStream Lodgements</description>
    <label>SuperStream</label>
</RecordType>