force-app/main/default/objects/tc9_eau__Lodgement_Error_AU__c/listViews/tc9_eau__All.listView-meta.xml
<ListView>
    <fullName>tc9_eau__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_eau__Single_Touch_Payroll_Manager__c</columns>
    <columns>tc9_eau__Lodgement_AU__c</columns>
    <columns>tc9_eau__Lodgement_Item_AU__c</columns>
    <columns>tc9_eau__Employee__c</columns>
    <columns>tc9_eau__Error_Message__c</columns>
    <columns>tc9_eau__ATO_Error__c</columns>
    <columns>tc9_eau__Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>